- Network listener for most requests  - Error view for the recyclerview

--- a/review/src/main/res/layout/activity_comparison.xml
+++ b/review/src/main/res/layout/activity_comparison.xml
@@ -25,26 +25,22 @@
         android:gravity="center"
         android:padding="10dp">
 
-        <RadioButton
-            android:layout_width="fill_parent"
+        <Button
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Application"
-            android:id="@+id/radio_app"
-            android:checked="true"
-            android:enabled="true"
-            android:buttonTint="@color/appColor"
-            android:theme="@style/MainAppTheme"
-            android:layout_weight="1"/>
+            android:id="@+id/app_button"
+            android:textColor="@color/appColor"
+            android:paddingLeft="10dp"/>
 
-        <RadioButton
-            android:layout_width="fill_parent"
+        <Button
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Other app"
-            android:id="@+id/radio_comparison"
-            android:checked="true"
-            android:buttonTint="@color/comparisonColor"
-            android:theme="@style/ComparedAppTheme"
-            android:layout_weight="1"/>
+            android:text="Other"
+            android:id="@+id/comparison_button"
+            android:textColor="@color/comparisonColor"
+            android:paddingRight="10dp"/>
+
     </LinearLayout>
 
 </RelativeLayout>
