--- a/review/src/main/res/layout/grid_error.xml
+++ b/review/src/main/res/layout/grid_error.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center">
+              android:layout_height="match_parent">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nothing&apos;s here"
-        android:id="@+id/empty_text"
+        android:layout_height="match_parent"
+        android:text="Check your internet connection"
+        android:id="@+id/textView9"
+        android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:paddingTop="50dp"
-        android:paddingBottom="50dp"/>
+        android:textSize="20sp"
+        android:textColor="#ff8a0c09"/>
 </LinearLayout>
