--- a/review/src/main/res/layout/list_fragment.xml
+++ b/review/src/main/res/layout/list_fragment.xml
@@ -21,4 +21,12 @@
         android:layout_centerHorizontal="true"
         android:gravity="center"/>
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/showcase_target"
+        android:visibility="gone"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"/>
+
 </RelativeLayout>
