- Fix columns bug  - Fix reviews loading bug

--- a/review/src/main/res/layout/activity_comparison.xml
+++ b/review/src/main/res/layout/activity_comparison.xml
@@ -31,7 +31,7 @@
             android:text="Application"
             android:id="@+id/app_button"
             android:textColor="@color/appColor"
-            android:paddingLeft="10dp"/>
+            android:padding="20dp"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -39,7 +39,7 @@
             android:text="Other"
             android:id="@+id/comparison_button"
             android:textColor="@color/comparisonColor"
-            android:paddingRight="10dp"/>
+            android:padding="20dp"/>
 
     </LinearLayout>
 
