--- a/review/src/main/res/layout/fragment_discover.xml
+++ b/review/src/main/res/layout/fragment_discover.xml
@@ -23,7 +23,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/grid_view"
-        android:layout_below="@+id/toolbar"
+        android:layout_below="@+id/scroll_view"
         app:columnWidth="@dimen/app_box_width"/>
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/scroll_view"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
