--- a/review/src/main/res/layout/fragment_discover.xml
+++ b/review/src/main/res/layout/fragment_discover.xml
@@ -7,18 +7,6 @@
     android:layout_height="match_parent"
     tools:context="com.obviz.review.ActivitySearch">
 
-    <android.support.v7.widget.Toolbar
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/ColorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-
-    </android.support.v7.widget.Toolbar>
-
     <com.obviz.review.views.GridRecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -32,6 +20,17 @@
         android:id="@+id/scroll_view"
         android:layout_below="@+id/toolbar"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:focusable="true"
+        android:clickable="true">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:id="@+id/topics_container"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:focusable="true"
+            android:clickable="true"/>
+    </HorizontalScrollView>
 
 </RelativeLayout>
