Some fixes and set the notifications 1 time per week on Sunday

--- a/review/src/main/res/layout/item_gauge.xml
+++ b/review/src/main/res/layout/item_gauge.xml
@@ -16,6 +16,6 @@
         android:layout_height="150dp"
         android:padding="10dp"
         android:focusable="false"
-        android:clickable="false"/>
+        android:clickable="false" android:layout_gravity="center"/>
 
 </LinearLayout>
