--- a/review/src/main/res/layout/activity_comparison.xml
+++ b/review/src/main/res/layout/activity_comparison.xml
@@ -16,7 +16,7 @@
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:id="@+id/information"
@@ -31,7 +31,7 @@
             android:text="Application"
             android:id="@+id/app_button"
             android:textColor="@color/appColor"
-            android:padding="20dp"/>
+            android:padding="20dp" android:layout_weight="1"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -39,7 +39,7 @@
             android:text="Other"
             android:id="@+id/comparison_button"
             android:textColor="@color/comparisonColor"
-            android:padding="20dp"/>
+            android:padding="20dp" android:layout_weight="1"/>
 
     </LinearLayout>
 
