--- a/review/src/main/res/values/dimens.xml
+++ b/review/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="app_box_width">160dp</dimen>
+    <dimen name="fullapp_box_width">320dp</dimen>
 </resources>
