--- a/review/src/main/res/layout/activity_comparison.xml
+++ b/review/src/main/res/layout/activity_comparison.xml
@@ -31,7 +31,8 @@
             android:text="Application"
             android:id="@+id/app_button"
             android:textColor="@color/appColor"
-            android:padding="20dp" android:layout_weight="1"/>
+            android:padding="20dp" android:layout_weight="1"
+            android:singleLine="true"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -39,7 +40,8 @@
             android:text="Other"
             android:id="@+id/comparison_button"
             android:textColor="@color/comparisonColor"
-            android:padding="20dp" android:layout_weight="1"/>
+            android:padding="20dp" android:layout_weight="1"
+            android:singleLine="true"/>
 
     </LinearLayout>
 
