--- a/review/src/main/res/layout/fragment_headline.xml
+++ b/review/src/main/res/layout/fragment_headline.xml
@@ -3,8 +3,7 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-    >
+                android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -21,7 +20,9 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="fill_parent"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
 
             <SearchView
                 android:layout_width="match_parent"
@@ -30,9 +31,11 @@
                 android:layout_centerHorizontal="true"
                 android:iconifiedByDefault="false"
                 android:inputType="text"
-                android:queryHint="Find your application ..."
+                android:queryHint="Search an app..."
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="30dp"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 />
 
             <RelativeLayout
