--- a/review/src/main/res/layout/fragment_headline.xml
+++ b/review/src/main/res/layout/fragment_headline.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:padding="10dp">
+        >
 
         <LinearLayout
             android:orientation="vertical"
@@ -36,19 +36,28 @@
                 android:layout_marginBottom="30dp"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
-                />
+                android:padding="20dp"
+                android:background="#ffe7e7e7"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/headline_title_background"
+                android:layout_marginBottom="20dp"/>
 
             <RelativeLayout
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
+                android:layout_height="fill_parent"
+                android:layout_margin="10dp">
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:id="@+id/app_logo"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:minHeight="40dp"
                     android:layout_marginRight="10dp"
                     android:layout_alignTop="@+id/headline_title"
                     android:layout_alignBottom="@+id/headline_title"
@@ -64,7 +73,7 @@
                     android:layout_toRightOf="@+id/app_logo"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
-                    android:minHeight="40dp"
+                    android:minHeight="60dp"
                     android:layout_marginBottom="20dp"
                     android:layout_alignParentTop="true"/>
 
@@ -101,16 +110,19 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"/>
 
-                <Button
-                    style="?android:attr/buttonStyleSmall"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="See more"
+                    android:text="Explore"
                     android:id="@+id/button_more"
-                    android:gravity="center"
+                    android:layout_alignParentBottom="false"
+                    android:background="@drawable/little_box"
+                    android:padding="20dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:layout_below="@+id/app_description"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"/>
+                    android:layout_alignParentRight="true"/>
             </RelativeLayout>
         </LinearLayout>
     </ScrollView>
