--- a/review/src/main/res/layout/item_app_rev_box.xml
+++ b/review/src/main/res/layout/item_app_rev_box.xml
@@ -26,16 +26,15 @@
         android:text="Name"
         android:id="@+id/app_name"
         android:padding="5dp"
-        android:textColor="#ff6e6e6e"
-        android:gravity="center"
         android:minHeight="40dp"
-        android:textSize="12sp"
+        android:textSize="18sp"
         android:maxHeight="40dp"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/app_logo"
         android:layout_alignParentRight="true"
         android:layout_alignBottom="@+id/app_logo"
-        android:layout_alignTop="@+id/app_logo"/>
+        android:layout_alignTop="@+id/app_logo"
+        android:gravity="bottom"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -67,7 +66,7 @@
             android:text="Worst opinion"
             android:id="@+id/worstOpinion"
             android:textSize="10sp"
-            android:layout_below="@+id/mostOpinion"
+            android:layout_below="@+id/space_opinions"
             android:layout_alignStart="@+id/mostOpinion"
             android:layout_alignLeft="@+id/mostOpinion"
             android:layout_alignParentLeft="true"
@@ -77,6 +76,13 @@
             android:padding="10dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:id="@+id/space_opinions"
+            android:layout_below="@+id/mostOpinion"
+            android:background="#ffa9a9a9"/>
 
     </RelativeLayout>
 
