--- a/review/src/main/res/layout/grid_loader.xml
+++ b/review/src/main/res/layout/grid_loader.xml
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Data are loading"
+        android:text="Data is loading"
         android:id="@+id/textView10"
         android:layout_gravity="center_horizontal"/>
 </LinearLayout>
