--- a/review/src/main/res/layout/fragment_headline.xml
+++ b/review/src/main/res/layout/fragment_headline.xml
@@ -17,7 +17,7 @@
         android:layout_alignParentStart="true"
         >
 
-        <LinearLayout
+        <RelativeLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -32,12 +32,16 @@
                 android:iconifiedByDefault="false"
                 android:inputType="text"
                 android:queryHint="Search an app..."
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="100dp"
                 android:layout_marginBottom="30dp"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 android:padding="20dp"
-                android:background="#ffe7e7e7"/>
+                android:background="#ffe7e7e7"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="0dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"/>
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -45,13 +49,20 @@
                 android:id="@+id/imageView"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/headline_title_background"
-                android:layout_marginBottom="20dp"/>
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="false"
+                android:layout_below="@+id/searchView"
+                android:layout_alignParentRight="true"/>
 
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_margin="10dp"
-                android:id="@+id/layout_headline">
+                android:id="@+id/layout_headline"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="false"
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/imageView"
+                android:layout_alignParentRight="true">
 
                 <ImageView
                     android:layout_width="60dp"
@@ -125,7 +136,14 @@
                     android:layout_below="@+id/app_description"
                     android:layout_alignParentRight="true"/>
             </RelativeLayout>
-        </LinearLayout>
+
+            <View
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/tutorial_target"
+                android:layout_alignTop="@+id/searchView"
+                android:layout_alignBottom="@+id/searchView"/>
+        </RelativeLayout>
     </ScrollView>
 
 </RelativeLayout>
